[package]
name = "krawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
dotenvy = "0.15.6"
flate2 = "1.0.24"
reqwest = { version = "0.11.13", features = ["json"] }
scraper = "0.13.0"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
